# sc

./: .gitignore  CMakeLists.txt  client.c  client.h  handler.c  handler.h  hashmap.c  hashmap.h  memory.c  memory.h  minheap.c  minheap.h  net.c  netevent.c  netevent.h  parse_http.c  parse_http.h  reactor.c  reactor.h  room.c  room.h  server.c  session.c  session.h  session_manager.c  session_manager.h  time_event.c  time_event.h  timeoutevent.c  transport.c  transport.h  util.c  util.h
3rd/c-websocket/: README.txt  base64.c  base64.h  cWebSockets.c  cWebSockets.h  sha1.c
3rd/cJson/: cJSON_Utils.c
3rd/http_parser/: bench.c  http_parser.c  simple_example.c
3rd/http_parser/contrib/: url_parser.c
demo/: index.html
js/: 5074client2.js  app.js  app_nsp.js  client.js  client_nsp.js  nsp.pcapng
socket.io_js_example/: 5074client.js  app.js  client.js
src/: CMakeLists.txt  client.c  client.h  client_manager.c  client_manager.h  handler.c  handler.h  handler_if.h  hashmap.c  hashmap.h  heap.c  heap.h  helper.c  helper.h  minheap.c  minheap.h  namespace.c  namespace.h  netevent.c  netevent.h  nsp.c  nsp.h  nsp_manager.c  nsp_manager.h  reactor.c  reactor.h  room.c  room.h  server.c  server.h  session.c  session.h  transport.c  transport.h  util.c  util.h
src/3rd/c-websocket/: README.txt  base64.c  cWebSockets.h  md5.c  md5.h  sha1.h
src/3rd/cJson/: cJSON.c  cJSON.h  cJSON_Utils.h
src/3rd/http_parser/: README.md  http_parser.h  test.c
src/3rd/http_parser/contrib/: parsertrace.c
